// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`it will work with an existing snapshot file made with bun 1`] = `
{
  "a": {
    "b": {
      "c": Any<Boolean>,
    },
  },
  "c": 2,
  "jkfje": 99238,
}
`;

exports[`it will work with an existing snapshot file made with bun 2`] = `
{
  "a": {
    "b": {
      "c": Any<String>,
    },
  },
  "c": 2,
  "jkfje": 99238,
}
`;

exports[`it will work with an existing snapshot file made with bun 3`] = `
{
  "a": {
    "b": {
      "c": Any<Number>,
    },
  },
  "c": 2,
  "jkfje": 99238,
}
`;

exports[`it will work with an existing snapshot file made with bun 4`] = `
{
  "a": {
    "b": {
      "c": Any<BigInt>,
    },
  },
  "c": 2,
  "jkfje": 99238,
}
`;

exports[`it will work with an existing snapshot file made with bun 5`] = `
{
  "a": Any<Date>,
}
`;

exports[`it will work with an existing snapshot file made with bun 6`] = `
{
  "a": "any",
  "b": Any<String>,
  "j": Any<Number>,
}
`;

exports[`it will work with an existing snapshot file made with bun 7`] = `
{
  "a": "any",
  "b": Any<String>,
  "j": Any<RegExp>,
}
`;

exports[`array holes match the snapshot entries jest writes 1`] = `
[
  1,
  ,
  3,
]
`;

exports[`array holes match the snapshot entries jest writes 2`] = `
[
  ,
  "b",
]
`;

exports[`array holes match the snapshot entries jest writes 3`] = `
[
  1,
  2,
  ,
]
`;

exports[`array holes match the snapshot entries jest writes 4`] = `
[
  ,
  ,
]
`;

exports[`array holes match the snapshot entries jest writes 5`] = `
[
  ,
]
`;

exports[`array holes match the snapshot entries jest writes 6`] = `
{
  "a": [
    ,
    1,
  ],
}
`;

exports[`array holes match the snapshot entries jest writes 7`] = `
[
  [
    ,
    1,
  ],
  ,
  [
    2,
  ],
]
`;

exports[`array holes match the snapshot entries jest writes 8`] = `
[
  1,
  undefined,
  3,
]
`;
